--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
         <title>Welcom to our webpage!!1!</title>
         <link rel="stylesheet" href="./style.css">
         <meta property="og:title" content="Welcom to our webpage!!1!"/>
+        <meta property="og:url" content="https://cuterboopersx3.github.io/"/>
 
     </head>
-
-    <div id='top'>
-        <h1>Welcom to our webpage!!1!</h1>
-    </div>
+    <body>
+        <div id='top'>
+            <h1>Welcom to our webpage!!1!</h1>
+        </div>
+    </body>
 </html>
